@@ -9,15 +9,13 @@ import fairshare.model.expense.Participant;
 import fairshare.model.tag.Tag;
 
 /**
- * A plain-text-friendly representation of an {@code Expense}.
- * Each expense is serialized as a single pipe-delimited line in the
- * format:
- * {@code expenseName|amount|payerName|participant1:shares,...|tag1,...}
+ * A plain-text-friendly representation of a {@code Expense}.
+ * Each expense is serialized as a single pipe-delimited line in the format:
+ * {@code expenseName|amount|payerName|share1,share2,...|tag1,tag2,...}
  */
 public class TxtAdaptedExpense {
-
-    private static final String FIELD_SEPARATOR = "\\|";
-    private static final String LIST_SEPARATOR = ",";
+    private static final String FIELD_SEPARATOR = "\\|"; //for splitting
+    private static final String LIST_SEPARATOR = ","; //for splitting lists
 
     private final String expenseName;
     private final double amount;
@@ -26,8 +24,7 @@ public class TxtAdaptedExpense {
     private final List<TxtAdaptedTag> tags;
 
     /**
-     * Constructs a {@code TxtAdaptedExpense} from an {@code Expense}
-     * model object.
+     * Constructs a {@code TxtAdaptedExpense} from an {@code Expense} model object.
      *
      * @param source the {@code Expense} to adapt; cannot be null.
      */
@@ -37,26 +34,24 @@ public class TxtAdaptedExpense {
         this.payer = new TxtAdaptedPerson(source.getPayer());
         this.participants = source.getParticipants().stream()
                 .map(TxtAdaptedParticipant::new)
-                .collect(Collectors.toList());
+                .toList();
         this.tags = source.getTags().stream()
                 .map(TxtAdaptedTag::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Constructs a {@code TxtAdaptedExpense} with all fields specified
-     * directly. Used during deserialization.
+     * Constructs a {@code TxtAdaptedExpense} with all fields specified directly.
+     * Used during deserialization.
      *
-     * @param expenseName  the expense name; cannot be null or empty.
-     * @param amount       the expense amount; must be greater than 0.
-     * @param payer        the adapted payer person; cannot be null.
-     * @param participants the list of adapted participants;
-     *                     cannot be null.
-     * @param tags         the list of adapted tags; cannot be null.
+     * @param expenseName the expense name; cannot be null or empty.
+     * @param amount      the expense amount; must be greater than 0.
+     * @param payer       the adapted payer person; cannot be null.
+     * @param participants the list of adapted participant persons; cannot be null.
+     * @param tags        the list of adapted tags; cannot be null.
      */
     public TxtAdaptedExpense(String expenseName, double amount,
-                             TxtAdaptedPerson payer,
-                             List<TxtAdaptedParticipant> participants,
+                             TxtAdaptedPerson payer, List<TxtAdaptedParticipant> participants,
                              List<TxtAdaptedTag> tags) {
         this.expenseName = expenseName;
         this.amount = amount;
@@ -93,9 +88,9 @@ public class TxtAdaptedExpense {
     }
 
     /**
-     * Returns the list of participants of this expense.
+     * Returns the list of participants sharing this expense.
      *
-     * @return a list of {@code TxtAdaptedParticipant}.
+     * @return a list of {@code TxtAdaptedPerson}.
      */
     public List<TxtAdaptedParticipant> getParticipants() {
         return participants;
@@ -111,27 +106,26 @@ public class TxtAdaptedExpense {
     }
 
     /**
-     * Converts this adapted expense back into an {@code Expense}
-     * model object.
+     * Converts this adapted expense back into an {@code Expense} model object.
      *
      * @return the corresponding {@code Expense}.
      */
     public Expense toModelType() {
-        List<Participant> participantList = participants.stream()
+        List<Participant> participants = this.participants.stream()
                 .map(TxtAdaptedParticipant::toModelType)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Tag> tagList = tags.stream()
                 .map(TxtAdaptedTag::toModelType)
                 .collect(Collectors.toList());
 
         return new Expense(expenseName, amount,
-                payer.toModelType(), participantList, tagList);
+                payer.toModelType(), participants, tagList);
     }
 
     /**
-     * Serializes this expense into a single pipe-delimited plain-text
-     * line.
+     * Serializes this expense into a single pipe-delimited plain-text line.
+     * Lists of shares and tags are joined with commas within their field.
      *
      * @return a string representation of this expense.
      */
@@ -152,14 +146,13 @@ public class TxtAdaptedExpense {
     }
 
     /**
-     * Deserialises a pipe-delimited plain-text line into a
+     * Deserializes a pipe-delimited plain-text line into a
      * {@code TxtAdaptedExpense}.
-     * Expected format:
-     * {@code expenseName|amount|payer|p1:s1,p2:s2|tag1,tag2}
+     * Expected format: {@code description|amount|payer|share1,share2|tag1,tag2}
      *
      * @param line the line to parse; must follow the expected format.
      * @return the corresponding {@code TxtAdaptedExpense}.
-     * @throws IllegalArgumentException if the line format is invalid.
+     * @throws IllegalArgumentException if the line does not have exactly 5 fields.
      */
     public static TxtAdaptedExpense deserialize(String line) {
         String[] parts = line.split(FIELD_SEPARATOR, -1);
@@ -169,23 +162,20 @@ public class TxtAdaptedExpense {
                     "Invalid expense format: " + line);
         }
 
-        String expenseName = parts[0].trim();
+        String description = parts[0].trim();
         double amount = Double.parseDouble(parts[1].trim());
         TxtAdaptedPerson payer = TxtAdaptedPerson.deserialize(parts[2]);
 
-        List<TxtAdaptedParticipant> participants =
-                Arrays.stream(parts[3].split(LIST_SEPARATOR))
-                        .filter(s -> !s.isBlank())
-                        .map(TxtAdaptedParticipant::deserialise)
-                        .collect(Collectors.toList());
+        List<TxtAdaptedParticipant> participants = Arrays.stream(parts[3].split(LIST_SEPARATOR))
+                .filter(s -> !s.isBlank())
+                .map(TxtAdaptedParticipant::deserialize)
+                .toList();
 
-        List<TxtAdaptedTag> tags =
-                Arrays.stream(parts[4].split(LIST_SEPARATOR))
-                        .filter(s -> !s.isBlank())
-                        .map(TxtAdaptedTag::deserialize)
-                        .collect(Collectors.toList());
+        List<TxtAdaptedTag> tags = Arrays.stream(parts[4].split(LIST_SEPARATOR))
+                .filter(s -> !s.isBlank())
+                .map(TxtAdaptedTag::deserialize)
+                .toList();
 
-        return new TxtAdaptedExpense(expenseName, amount,
-                payer, participants, tags);
+        return new TxtAdaptedExpense(description, amount, payer, participants, tags);
     }
 }
